src/test/tests/syntaxError/doubleSemicolonWhile.wacc
begin
    while false do int x = 3;; skip done
end